Fixed some broken CSS

--- a/cciw/cciwmain/static/css/style.less
+++ b/cciw/cciwmain/static/css/style.less
@@ -959,15 +959,15 @@ ul.messagelist li {
     margin: 0 0 3px 0;
     border-bottom: 1px solid #ddd;
     color: #666;
-    background: #ffc url(../admin/img/icon_success.gif) 5px .3em no-repeat;
+    background: #ffc url(/static/admin/img/icon_success.gif) 5px .3em no-repeat;
 }
 
 ul.messagelist li.warning{
-    background-image: url(../admin/img/icon_alert.gif);
+    background-image: url(/static/admin/img/icon_alert.gif);
 }
 
 ul.messagelist li.error{
-    background-image: url(../admin/img/icon_error.gif);
+    background-image: url(/static/admin/img/icon_error.gif);
 }
 
 /* Booking */
